--- a/resources/assets/sass/_acs-variables.scss
+++ b/resources/assets/sass/_acs-variables.scss
@@ -1,4 +1,6 @@
 $color-bg-abs               : #000000;
+$color-menu-stop1           : #dbdada;
+$color-menu-stop2           : darken($color-menu-stop1, 20%);
 
 
 // Images --------------------------------------------------
