--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,9 @@
 // Variables
 @import "variables";
 
+// Bootstrap overrides (MUST come before Bootstrap import.)
+@import "bootstrap-overrides";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
@@ -14,6 +17,7 @@
 }
 
 // American Cabin Supply
+@import "typography";
 @import "acs-variables";
 @import "base";
 @import "layout";
