--- a/resources/assets/sass/_acs-variables.scss
+++ b/resources/assets/sass/_acs-variables.scss
@@ -3,6 +3,10 @@ $color-menu-stop1           : #dbdada;
 $color-menu-stop2           : darken($color-menu-stop1, 20%);
 
 
+// Fonts --------------------------------------------------
+$font-script                : "spumante", script;
+
+
 // Images --------------------------------------------------
 $bg-main                    : url("/images/background-planes-2800x1600.jpg");
 $bg-hero                    : url("/images/hero-01.jpg");
