--- a/resources/assets/sass/_mixins.scss
+++ b/resources/assets/sass/_mixins.scss
@@ -3,7 +3,7 @@
   background: $color1 $gradient;
   color: darken($color2, 30%);
   text-shadow: 0 -1px 0 darken($color2, 50%), 0 1px 0 lighten($color2, 10%);
-  box-shadow: 0 2px 0 darken($color1, 30%);
+  box-shadow: 0 2px 0 darken($color1, 30%), 0 0 5px rgba($color-bg-main, 0.25);
 
   &:hover {
     color: darken($color2, 10%);
