--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -20,7 +20,13 @@ header a {
 
 .navbar {
   margin-bottom: 2rem;
-}
+
+  a {
+    font-style: initial;
+    font-weight: bold;
+  } // a
+
+} // .navbar
 
 // Animate the dropdown menus.
 .dropdown .dropdown-menu {
@@ -71,7 +77,7 @@ header a {
   background: $color-bg-lighter $grad-menu;
 
   @include media-breakpoint-down(sm) {
-    @include invisible(hidden);
+    display: none;
   } // media-breakpoint-down(md)
 
 } // #main-content
@@ -118,8 +124,9 @@ header a {
   text-align: center;
   display: block;
   font-weight: bold;
+  font-style: initial;
   text-transform: uppercase;
-  font-size: 90%;
+  font-size: 85%;
 
   @include media-breakpoint-down(lg) {
     font-size: 70%;
@@ -200,6 +207,10 @@ header a {
   margin-bottom: $spacer;
   padding: $spacer * 0.50;
 
+  &:last-of-type {
+    margin-bottom: initial;
+  } // :last-of-type
+
   h2, h3, h4 {
     font-family: $font-headings;
     font-weight: bold;
@@ -224,3 +235,13 @@ header a {
   } // :hover
 
 } // #cat-cover
+
+
+// Footer --------------------------------------------------
+footer {
+
+  p {
+    text-align: center;
+  } // p
+
+} // footer
