# Product Page Started #
* Begins work on the Product page(s).
* Other minor additions, tweaks, and bug fixes.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10417,6 +10417,20 @@ header a {
   border-color: #999999;
 }
 
+#product-content {
+  background: #000000;
+  color: #b3b2b2;
+  border: 2px solid #333333;
+}
+
+#product-content #title {
+  text-align: center;
+}
+
+.accented {
+  color: #c61d23;
+}
+
 footer p {
   text-align: center;
 }
