--- a/resources/assets/sass/_acs-variables.scss
+++ b/resources/assets/sass/_acs-variables.scss
@@ -16,6 +16,7 @@ $color-link-active          : lighten($color-link, 40%);
 $color-linkalt              : #00ced1;
 $color-linkalt-hover        : lighten($color-linkalt, 10%);
 $color-linkalt-active       : lighten($color-linkalt, 20%);
+$color-accent               : #c61d23;
 
 $color-napkin-stop1         : #f04d3f;
 $color-napkin-stop2         : darken($color-napkin-stop1, 10%);
