# Pre-.gitignore fix #
* Adds a `getFeatures()` method to `ProductController` to handle the AJAX request for the Features & Options section of the Product page.
* Creates the `ProductFeature` model, along with its `ProductFeaturePivot` pivot table model.
* Updates the `ProductLine` model to define a relationship with `ProductFeature`.
* Adds migrations for the `product_features` table, `product_features_pivot` table, and the `product_feature_product_line` table.
* Attempts to create a `FeatureList.vue` file for displaying the AJAX'd Product Features & Options.
* Adds some styling for the Features & Options list.
* Modifies `PrintMethods.vue` to get the buttons work properly? (Not sure, as it has been a long time since this change was made, but never committed.
* Allows for individual page scripts via Blade's `@stack()` directive.
* Updates `.gitignore`, ready to fix tracked files.
* Removes some old, outdated, commented-out code.
* Cleans up some hard-to-parse code.
* Other notes added at the bottom of `ProductController` over the weekend.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10558,6 +10558,23 @@ header a {
   color: #c61d23;
 }
 
+#fo-column {
+  padding: 1em;
+}
+
+#fo-column #features-options {
+  padding: 1em;
+  border: 2px solid #b3b2b2;
+}
+
+#fo-column #features-options h2 {
+  color: #c61d23;
+  font-family: "proxima-nova-extra-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 900;
+}
+
 footer p {
   text-align: center;
 }
